# Job-Search-App

./: README.md  main.py  pyproject.toml
src/: json_vacancy_data_storage.py  utils.py  vacancy.py  vacancy_data_storage.py
src/api/: hh_vacancy_api.py  superjob_vacancy_api.py  vacancy_api.py
